my-apps/privacy/proxitok/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxitok
  labels:
    # Pod Security Standards for Talos
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
