my-apps/privacy/proxitok/deployment.yaml
# proxitok-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxitok-web
  namespace: proxitok
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: proxitok-web
  template:
    metadata:
      labels:
        app: proxitok-web
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: proxitok-web
        image: ghcr.io/pablouser1/proxitok@sha256:1cbbff4b5b1c6ba8d585379ad71fc93950e340c3a5ae46dd3574e751a873bf8e
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
          capabilities:
            drop:
            - ALL
            add:
            - CHOWN
            - SETGID
            - SETUID
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
        volumeMounts:
        - name: cache-volume
          mountPath: /cache
        - name: run-volume
          mountPath: /run
        - name: nginx-logs
          mountPath: /var/lib/nginx/logs
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: proxitok-cache-pvc
      - name: run-volume
        emptyDir: {}
      - name: nginx-logs
        emptyDir: {}
