my-apps/privacy/proxitok/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxitok-route
  namespace: proxitok
  annotations:
    # ExternalDNS will create a CNAME record pointing to the Cloudflare Tunnel
    external-dns.alpha.kubernetes.io/target: "9c427450-dcfe-4eed-934c-cd41298f347e.cfargotunnel.com"
spec:
  parentRefs:
    - name: gateway-external # Must match your Gateway's metadata.name
      namespace: gateway
      sectionName: https # Must match your Gateway's listeners[].name
  hostnames:
    - "proxitok.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: proxitok-web
          port: 8080
